--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </script>
 <meta name="description" content="提供酵母购,小牧狗,小母狗,小木购,小木构,xiaomugou相关信息" />
 <meta name="keywords" content="酵母购,小牧狗,小母狗,小木购,小木构,xiaomugou" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <title>xiaomugou</title>
 </head>
 <body>
