--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     if (hash!="default"){window.location.href=kvs[hash];}
     window.onhashchange=function(){window.location.href=kvs[hash];};
 </script>
-<meta name="description" content="提供酵母购,小牧狗,小母狗,小木购,小木构,xiaomugou相关信息" />
-<meta name="keywords" content="酵母购,小牧狗,小母狗,小木购,小木构,xiaomugou" />
+<meta name="description" content="在这里提供小母狗,小牧狗,小木狗,小木购,小木构,小募购,酵母购,xiaomugou的相关信息" />
+<meta name="keywords" content="小母狗,小牧狗,小木狗,小木购,小木构,小募购,酵母购,xiaomugou" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <title>xiaomugou</title>
 </head>
 <body>
     <h1>xiaomugou.com 小母狗 小木构</h1>
-    <p>welcome.</p>
+    <p>welcome. &copy;2017 xiaomugou</p>
 <div style="display:none"><script src="https://s11.cnzz.com/z_stat.php?id=1255136789&web_id=1255136789" language="JavaScript"></script></div>
 </body>
 </html>
