--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <title>xiaomugou</title>
 </head>
 <body>
-    <h1>xiaomugou.com 小母狗 小木构</h1>
-    <p>welcome. &copy;2017 xiaomugou</p>
+    <h1>小母狗,小牧狗,小木狗,小木购,小木构,小募购,酵母购,xiaomugou</h1>
+    <p>&copy;2017 xiaomugou</p>
 <div style="display:none"><script src="https://s11.cnzz.com/z_stat.php?id=1255136789&web_id=1255136789" language="JavaScript"></script></div>
 </body>
 </html>
