--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <title>xiaomugou</title>
 </head>
 <body>
-    <h1>小母狗,小牧狗,小木狗,小木购,小木构,小募购,酵母购,xiaomugou</h1>
+    <h1>小母狗 小牧狗 小木狗 小木购 小木构 小募购 酵母购 xiaomugou</h1>
     <p>&copy;2017 xiaomugou</p>
 <div style="display:none"><script src="https://s11.cnzz.com/z_stat.php?id=1255136789&web_id=1255136789" language="JavaScript"></script></div>
 </body>
