--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h1>小母狗 小牧狗 小木狗 小木购 小木构 小募购 酵母购 xiaomugou</h1>
-    <p style="text-align:center;color:rgb(128,128,128)"><a href='mailto:xiaomugou@iga.cc'>联系我们</a><br />&copy;2017 xiaomugou </p>
+    <p style="text-align:center;color:rgb(128,128,128)"><a style='color:rgb(128,128,128)' href='mailto:xiaomugou@iga.cc'>联系我们</a><br />&copy;2017 xiaomugou </p>
 <div style="display:none"><script src="https://s11.cnzz.com/z_stat.php?id=1255136789&web_id=1255136789" language="JavaScript"></script></div>
 </body>
 </html>
