--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <html>
 <head>
-<script>
-    var kvs={
-    "default":"",
-    "b":"http://baidu.com",
-    "c":"http://cnbeta.com",
-    };
-    var hash=window.location.hash.substr(1);
-    if (hash==""){hash="default";}
-    if (hash!="default"){window.location.href=kvs[hash];}
-    window.onhashchange=function(){window.location.href=kvs[hash];};
-</script>
+<meta charset='utf-8' />
 <meta name="description" content="在这里提供小母狗,小牧狗,小木狗,小木购,小木构,小募购,酵母购,xiaomugou的相关信息" />
 <meta name="keywords" content="小母狗,小牧狗,小木狗,小木购,小木构,小募购,酵母购,xiaomugou" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<title>xiaomugou</title>
+<style>
+body 
+  {
+    text-align:center;
+    color:rgb(70,70,70);
+    background-color:rgb(36,36,36);
+    background-image:url(bg.png);
+    background-repeat:no-repeat;
+    background-position:50% 50%;
+    background-attachment:fixed
+    }
+</style>
+<title>小 母 狗</title>
 </head>
 <body>
-    <h1>小母狗 小牧狗 小木狗 小木购 小木构 小募购 酵母购 xiaomugou</h1>
-    <p style="text-align:center;color:rgb(128,128,128)"><a style='color:rgb(128,128,128);text-decoration:none;' href='mailto:xiaomugou@iga.cc'>联系我们</a><br />&copy;2017 xiaomugou </p>
+    <h1 style="display:none;">本站提供小母狗 小牧狗 小木狗 小木购 小木构 小募购 酵母购 xiaomugou的相关信息，合作事宜，请联系下方邮箱。</h1>
+    <p><a style='color:rgb(15,15,15);text-decoration:none;' href='mailto:xiaomugou@iga.cc'>contact</a></p>
+    <!--<br />&copy;2017 xiaomugou -->
 <div style="display:none"><script src="https://s11.cnzz.com/z_stat.php?id=1255136789&web_id=1255136789" language="JavaScript"></script></div>
 </body>
 </html>
