--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://weibo.com/tohno?refer_flag=1001030001_&nick=cttatt&is_all=1" />
+<meta http-equiv="refresh" content="0; url=https://weibo.com/kidneydr/profile?topnav=1&wvr=6&is_all=1" />
 </head>
 <body>
 </body>
