--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://weibo.com/kidneydr/" />
+<meta http-equiv="refresh" content="0; url=https://weibo.com/p/1005056466349328" />
 </head>
 <body>
 </body>
